--- a/Views/Home.handlebars
+++ b/Views/Home.handlebars
@@ -1,12 +1,16 @@
 {{#each erros}}
-<div class = "alert alert-danger">{{texto}}</div>
-{{else}}
+    <div class="alert alert-danger">{{texto}}</div>
 {{/each}}
 <h3>Bem vindo ao estudo de alimentação</h3>
-<div class="card" style="background-color:aqua">
-<div class="card-body">
-<a href="/adminuser/login"><button  class="btn btn-success" >LOGIN</button></a>
-<a href="/adminuser/registro"><button class = "btn btn-success mt-6">REGISTRO</button></a>
-<a href="/adminuser/ReenviarToken"><button class = "btn btn-success mt-6">Reenvio de Confirmação</button></a>
-</div>
+<br>
+<div class ="card mt-4">
+    <div class ="card-body">
+        <form action="/adminuser/registro" method="post">
+            <label for="nome">Nome e Sobrenome:</label>
+            <input type="text" name="nome" class="form-control" required>
+             <label for="nome">Ano De Nascimento:</label>
+            <input type="date" name="nascimento" class="form-control" required>
+            <button type="submit" class="btn btn-success mt-4">Registrar</button>
+        </form>
+    </div>
 </div>
