--- a/Views/feedback.handlebars
+++ b/Views/feedback.handlebars
@@ -1,12 +1,12 @@
 <div class="container mt-3" style="background-color : aquamarine;">
    <div id="Recomendações" style="font-size:200%;color:rgb(0, 0, 0);text-shadow: #86a52a;margin:5%; background-image: linear-gradient(aquamarine, rgb(9, 255, 0))">
-    <h1 style="font-style: italic; color :darkgreen">RECOMENDAÇÕES</h1>
-        <img src="/img/Recomendações para uma alimentação mais saudavel.png" width="415" height="500"><br>
-        <img src="/img/1-2.png" width="440" height="500">
-        <img src="/img/3-4.png" width="440" height="500">
+        <h3 style="font-style: italic; color :rgb(0, 46, 0)">0-31: Há espaço para melhoria. </h3>
+    <h3 style="font-style: italic; color :rgb(0, 46, 0)">31-41: Pontuação mediana, mas já serve como um bom exemplo.   </h3>
+    <h3 style="font-style: italic; color :rgb(0, 46, 0)">41-72: Parabéns, sua alimentação é exemplar.</h3>
+    <h1 style="font-style: italic; color :rgb(0, 46, 0)">Sua pontuação: {{resultado}}</h1>
+    <form action="/adminuser/logout" method="POST">
+        <button type="submit" class="btn btn-success">REJOGAR</button>
+    </form>
+
 </div>
-    <h3 style="font-style: italic; color :darkgreen">0-31: Precisa melhorar. </h3>
-    <h3 style="font-style: italic; color :darkgreen">31-41: Mediana mas ja é um bom exemplo. </h3>
-    <h3 style="font-style: italic; color :darkgreen">41-72: Parabens, você tem uma alimentação exemplar</h3>
-    <h1>Sua pontuação: {{pontuacao}}</h1>
 </div>
