--- a/Views/Home.handlebars
+++ b/Views/Home.handlebars
@@ -1,7 +1,8 @@
+
 {{#each erros}}
     <div class="alert alert-danger">{{texto}}</div>
 {{/each}}
-<h3>Bem vindo ao estudo de alimentação</h3>
+<h3 style="color:rgb(255, 0, 255);">Diga-nos quem você é :</h3>
 <br>
 <div class ="card mt-4">
     <div class ="card-body">
@@ -10,7 +11,7 @@
             <input type="text" name="nome" class="form-control" required>
              <label for="nome">Ano De Nascimento:</label>
             <input type="date" name="nascimento" class="form-control" required>
-            <button type="submit" class="btn btn-success mt-4">Registrar</button>
+            <button type="submit" class="btn btn-success mt-4">JOGAR</button>
         </form>
     </div>
 </div>
