--- a/Views/Home.handlebars
+++ b/Views/Home.handlebars
@@ -9,7 +9,7 @@
         <form action="/adminuser/registro" method="post">
             <label for="nome">Nome e Sobrenome:</label>
             <input type="text" name="nome" class="form-control" required>
-             <label for="nome">Ano De Nascimento:</label>
+             <label for="nome">Data De Nascimento:</label>
             <input type="date" name="nascimento" class="form-control" required>
             <button type="submit" class="btn btn-success mt-4">JOGAR</button>
         </form>
